# uner_code

./: prepare_data.py  requirements.txt  run_training.ipynb  test.txt  test3.txt  train_uner.py
propn-ner-comparator/: README.md  parse.py  pyproject.toml  reorder.py  requirements.txt
